--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "parkmaid",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Discord bot for karaoke",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
