--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.12.2",
+    "humanize-duration": "^3.25.1",
+    "mariadb": "^2.5.3",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.0"
   }
